--- a/bin/ShopApp.dll.config
+++ b/bin/ShopApp.dll.config
@@ -11,11 +11,9 @@
   <connectionStrings>
   <!-- Who can acces the app-->
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ShopApp-20200112095632.mdf;Initial Catalog=aspnet-ShopApp-20200112095632;Integrated Security=True" providerName="System.Data.SqlClient" />
-  <!-- Every model DB connection separetely-->
-    <add name="ProductDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB; Initial Catalog=aspnet-ShopApp;Integrated Security=SSPI; AttachDBFilename=|DataDirectory|\Products.mdf" providerName="System.Data.SqlClient" />
-    <add name="CartModelDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB; Initial Catalog=aspnet-ShopApp;Integrated Security=SSPI; AttachDBFilename=|DataDirectory|\Products.mdf" providerName="System.Data.SqlClient" />
-    <add name="ProductCategoryDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB; Initial Catalog=aspnet-ShopApp;Integrated Security=SSPI; AttachDBFilename=|DataDirectory|\Products.mdf" providerName="System.Data.SqlClient" />
-    <add name="UserManagementDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB; Initial Catalog=aspnet-ShopApp;Integrated Security=SSPI; AttachDBFilename=|DataDirectory|\Products.mdf" providerName="System.Data.SqlClient" />
+    <add name="ShopContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-ShopApp;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\ShopApp.mdf" providerName="System.Data.SqlClient" />
+  
+    
     
   </connectionStrings>
   <appSettings>
